# secret-hitler

./: .gitmodules  README.md
client/: cli.js  client.js  package-lock.json  package.json  test.js
server/: .gitignore  CMakeLists.txt  common.h  communicationManager.cpp  communicationManager.h  game.cpp  game.h  main.cpp  manager.h  player.cpp  player.h  slotMap.cpp  slotMap.h
server/include/: ignore.h
server/test/: gameTests.cpp
web-app/: package-lock.json  package.json
web-app/public/: global.css  index.html
web-app/src/: App.svelte  BeforeGameStart.svelte  Board.svelte  ConnectScreen.svelte  Create.svelte  Decision.svelte  DecisionAlert.svelte  Join.svelte  Messages.svelte  Reveal.svelte  Secret.svelte  SecretDecision.svelte  TextMessage.svelte  client.js  messageStore.js  stores.js
